src/test/ui/error-codes/E0297.stderr
error[E0005]: refutable pattern in `for` loop binding: `None` not covered
  --> $DIR/E0297.rs:4:9
   |
LL |     for Some(x) in xs {}
   |         ^^^^^^^ pattern `None` not covered
   |
note: `Option<i32>` defined here
  --> $SRC_DIR/core/src/option.rs:LL:COL
   |
LL | / pub enum Option<T> {
LL | |     /// No value.
LL | |     #[lang = "None"]
LL | |     #[stable(feature = "rust1", since = "1.0.0")]
LL | |     None,
   | |     ^^^^ not covered
...  |
LL | |     Some(#[stable(feature = "rust1", since = "1.0.0")] T),
LL | | }
   | |_-
   = note: the matched value is of type `Option<i32>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0005`.
